--- a/jenkins-examples/pipeline-examples/declarative-examples/maven-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/declarative-examples/maven-example/Jenkinsfile
@@ -18,15 +18,15 @@ pipeline {
                 rtMavenDeployer (
                     id: "MAVEN_DEPLOYER",
                     serverId: "ARTIFACTORY_SERVER",
-                    releaseRepo: "libs-release-local",
-                    snapshotRepo: "libs-snapshot-local"
+                    releaseRepo: "maven-libs-release-local",
+                    snapshotRepo: "maven-libs-snapshot-local"
                 )
 
                 rtMavenResolver (
                     id: "MAVEN_RESOLVER",
                     serverId: "ARTIFACTORY_SERVER",
-                    releaseRepo: "libs-release",
-                    snapshotRepo: "libs-snapshot"
+                    releaseRepo: "maven-libs-release",
+                    snapshotRepo: "maven-libs-snapshot"
                 )
             }
         }
