--- a/jenkins-examples/pipeline-examples/declarative-examples/maven-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/declarative-examples/maven-example/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                 rtServer (
                     id: "ARTIFACTORY_SERVER",
                     url: "https://probe.jfrog.io/artifactory",
-                    credentialsId: a.kumar1nav@gmail.com:R@njan123@@
+                    credentialsId: "a.kumar1nav@gmail.com:R@njan123@@"
                 )
 
                 rtMavenDeployer (
