--- a/jenkins-examples/pipeline-examples/declarative-examples/maven-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/declarative-examples/maven-example/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
             steps {
                 rtMavenRun (
                     tool: MAVEN_TOOL, // Tool name from Jenkins configuration
-                    pom: 'maven-example/pom.xml',
+                    pom: 'maven-examples/maven-example/pom.xml',
                     goals: 'clean install',
                     deployerId: "MAVEN_DEPLOYER",
                     resolverId: "MAVEN_RESOLVER"
